Changed to dogs

--- a/index.html
+++ b/index.html
@@ -2,17 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>API Requests</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Random Animal Generator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Random Animal Image Generator</h1>
+    <button id="getImage">Get Random Animal</button>
 
-    <h1>Random Quote Generator</h1>
-
-    <button id="fetchQuote">Get a New Quote</button>
-
-    <div id="quoteDisplay">
-        <!-- Quotes will be generated here -->
+    <div id="imageDisplay">
     </div>
 
     <script src="script.js"></script>
