--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Random Animal Image Generator</h1>
-    <button id="getImage">Get Random Animal</button>
-
+    <h1>Random Dog Image Generator</h1>
+    <button id="getImage">See A Random Dog</button>
+    <br>
     <div id="imageDisplay">
     </div>
 
